Partial compatibility with JDK9 in root pom.xml, NetBeans configuration and doclet.